Fixed a z-index bug for the btn rules in desktop view

--- a/scss/_rules.scss
+++ b/scss/_rules.scss
@@ -11,6 +11,7 @@
     font-size: 1rem;
     border: 1px solid white;
     border-radius: 8px;
+    z-index: 2;
 }
 
 .rules {
